feat: new integration cost (#11)