@@ -1,13 +1,12 @@
 package com.api.hexagonal_architecture.adapter.in.web;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
@@ -16,6 +15,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.api.hexagonal_architecture.domain.exception.ProductNotFoundException;
 import com.api.hexagonal_architecture.domain.model.Product;
 import com.api.hexagonal_architecture.domain.port.in.ProductServicePort;
 
@@ -31,32 +31,30 @@ public class ProductController {
 
     @PostMapping
     public ResponseEntity<ProductResponse> createProduct(@RequestBody ProductRequest request) {
-        Product product = Product.create(request.name(), request.price(), request.description());
+        Product product = Product.create(request.name(), request.description(), request.price());
         Product created = productService.createProduct(product);
         return new ResponseEntity<>(ProductResponse.from(created), HttpStatus.CREATED);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<ProductResponse> getProduct(@PathVariable Long id) {
-        Optional<Product> productOpt = productService.findProductById(id);
-        return productOpt
-                .map(product -> ResponseEntity.ok(ProductResponse.from(product)))
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).build());
+        Product product = productService.findProductById(id)
+                .orElseThrow(() -> new ProductNotFoundException(id));
+        return ResponseEntity.ok(ProductResponse.from(product));
     }
 
     @GetMapping
     public ResponseEntity<List<ProductResponse>> listProducts() {
         List<ProductResponse> products = productService.listProducts().stream()
                 .map(ProductResponse::from)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(products);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<ProductResponse> updateProduct(
-            @PathVariable Long id,
-            @RequestBody ProductRequest request) {
-        Product updated = productService.updateProduct(id, request.name(), request.price(), request.description());
+    public ResponseEntity<ProductResponse> updateProduct(@PathVariable Long id,
+                                                          @RequestBody ProductRequest request) {
+        Product updated = productService.updateProduct(id, request.name(), request.description(), request.price());
         return ResponseEntity.ok(ProductResponse.from(updated));
     }
 
@@ -68,11 +66,22 @@ public class ProductController {
 
     @GetMapping("/search")
     public ResponseEntity<List<ProductResponse>> findByName(@RequestParam String name) {
-        List<ProductResponse> products = productService.findProductByName(name)
-                .stream()
+        List<ProductResponse> products = productService.findProductByName(name).stream()
                 .map(ProductResponse::from)
                 .toList();
-
         return ResponseEntity.ok(products);
+    }
+
+    @PatchMapping("/{id}/recipe/{recipeId}")
+    public ResponseEntity<ProductResponse> linkRecipe(@PathVariable Long id,
+                                                       @PathVariable Long recipeId) {
+        Product updated = productService.linkRecipe(id, recipeId);
+        return ResponseEntity.ok(ProductResponse.from(updated));
+    }
+
+    @DeleteMapping("/{id}/recipe")
+    public ResponseEntity<ProductResponse> unlinkRecipe(@PathVariable Long id) {
+        Product updated = productService.unlinkRecipe(id);
+        return ResponseEntity.ok(ProductResponse.from(updated));
     }
 }
